2009-05-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Support Linux style silent build rules.

2009-05-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am: Updated to Automake 1.11.

2009-05-17  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/txt.c First attempt to read back txt file.
	It is amazingly ineffective, but it seems to work.

2009-05-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resize.c (HorizontalFilter, VerticalFilter): When
	resizing a non-opaque image, attenuate the influence of
	surrounding colors based on their degree of transparency in order
	to avoid "halos" around objects caused by colors which are
	transparent and therefore not part of the visible image.  Patch
	contributed by Pavel Merdin via SourceForge Tracker #2792322.
	(VerticalFilter, VerticalFilter): Additional clean-up and
	optimizations.

2009-05-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): Added a -recolor command option
	to provide access to ColorMatrixImage().

	* magick/fx.c (ColorMatrixImage): New function to apply a color
	matrix similar to Adobe Flash Flash.filters.colorMatrixFilter(),
	and Windows GDI+ ColorMatrix class, (order up to 5x5) to the image
	pixels.

2009-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/perl.rst: Add missing PerlMagick debug event types.

	* coders/pcl.c: Major improvements from John Sergeant.  These
	include: 1) Fixed 2 bit output where Max=BLACK - this always
	produced negative images even when -negate was passed as a
	parameter. The code now uses a two element palette to handle this
	situation.  2) Added support for 8 bit pseudoclass images.  3)
	Changed the coder to allow adjoin, placing each sub-image on a new
	page.  4) Added support for compression. Any compression other
	than "None" will cause the coder to to try to calculate and pick
	the best out of the PCL set of RLE, Tiff RLE or delta compression