@@ -1,3 +1,7 @@
+2009-05-19  Fojtik Jaroslav  <JaFojtik@seznam.cz>
+
+	* coders/txt.c Ability to read back Q32 txt files.
+
 2009-05-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* configure.ac: Support Linux style silent build rules.
